--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "ciscospark-bff",
-  "version": "0.1.0",
-  "description": "Cisco Spark's BFF: Bot Framework For...? (w/e)",
+  "name": "robota",
+  "version": "0.2.0",
+  "description": "Easily write your own personal Cisco Spark bot(s)",
   "license": "MIT",
-  "homepage": "https://github.com/hagemt/node-ciscospark-bff#readme",
+  "homepage": "https://github.com/hagemt/node-robota#readme",
   "author": "Tor E Hagemann <tor.hagemann@gmail.com>",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "bugs": {
-    "url": "https://github.com/hagemt/node-ciscospark-bff/issues"
+    "url": "https://github.com/hagemt/node-robota/issues"
   },
   "dependencies": {
     "bunyan": "1.8.5",
     "co-body": "4.2.0",
+    "config": "1.24.0",
     "lodash": "4.17.4",
     "request": "2.79.0"
   },
   "devDependencies": {
+    "babel-cli": "^6",
+    "babel-polyfill": "^6",
+    "babel-preset-es2015": "^6",
+    "babel-register": "^6",
     "eslint": "^3",
     "mocha": "^3",
     "ngrok": "^2",
-    "nyc": "^10"
+    "nyc": "^10",
+    "should": "^11"
   },
   "keywords": [
     "Cisco",
@@ -28,9 +39,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hagemt/node-ciscospark-bff.git"
+    "url": "git+https://github.com/hagemt/node-robota.git"
   },
   "scripts": {
+    "pretag": "babel es6.js > es5.js # legacy",
+    "tag": "git tag -f latest # TODO: version?",
+    "posttag": "npm publish # TODO: prompt?",
+    "start": "node example.js | bunyan",
     "test": "nyc mocha"
   }
 }
